# tridge

./: db.sqlite3  pyproject.toml
hamji/: settings.py  urls.py
polls/: forms.py  models.py  paginations.py  signals.py  urls.py  views.py
polls/migrations/: 0002_alter_question_options_question_is_closed_comment.py  0003_alter_question_pub_date.py  0004_comment_parent.py  0005_alter_comment_parent.py  0006_alter_comment_parent.py  0007_alter_comment_parent.py  0008_choice_created_on.py  0009_remove_question_is_closed_question_closed_at.py  0010_choice_approved_alter_question_closed_at.py  0011_question_max_choices_alter_question_closed_at.py  0012_question_made_by_alter_question_closed_at.py  0013_rename_made_by_question_creator_and_more.py
polls/templates/polls/: base.html  choice.html  comment.html  comment_tree.html  detail.html  index.html  search_result.html
users/: urls.py  views.py
users/templates/users/: login.html  signup.html
